<resources>
    <string name="app_name">TooDoo</string>
    <string name="task_details_txt">Details</string>
    <string name="task_headline_txt">Headline</string>
    <string name="task_target_date_txt">Due</string>
    <string name="task_priority_txt">Priority</string>
    <string name="task_status_txt">Status</string>
    <string name="task_category_txt">Category</string>
    <string name="cat_name">Name</string>
    <string name="cat_colour">Color</string>
    <string name="list_add_btn_txt">Add</string>
    <string name="task_update_btn_txt">Update</string>
    <string name="task_delete_btn_txt">Delete</string>
    <string name="menu_category_txt">Category Filter...</string>
    <string name="menu_sort_txt">Sort by...</string>
    <string name="menu_reverse_txt">Reverse</string>
    <string name="menu_refresh_txt">Refresh</string>
    <string name="submenu_prority_txt">Priority</string>
    <string name="submenu_headline_txt">Headline</string>
    <string name="submenu_due_date_txt">Due date</string>
</resources>
